force-app/main/default/objects/Product__c/fields/API_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Id__c</fullName>
    <description>Product Id from Dummy</description>
    <externalId>true</externalId>
    <label>API_Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>