force-app/main/default/objects/Product__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Brand from Dummy</description>
    <label>Brand</label>
    <length>200</length>
    <type>Text</type>
</CustomField>