force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Product Category from Dummy</description>
    <label>Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>