force-app/main/default/objects/Product__c/fields/Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_URL__c</fullName>
    <label>Thumbnail_URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>